<resources>
    <string name="app_name">Habesha Agenagn</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="login_us_service_provider">Login us Service provider</string>
    <string name="navigation_drawer_open" translatable="false">open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">close navigation drawer</string>
    <string name="map_key" translatable="false"> AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="work">Work:</string>
    <string name="exp">Exp:</string>
    <string name="phone_number">Phone number</string>
    <string name="description">Description</string>
    <string name="signup">Signup</string>
    <string name="wellcome">WELLCOME:</string>
    <string name="user_name">USER NAME</string>
    <string name="email">EMAIL:</string>
    <string name="user_email">USER EMAIL</string>
    <string name="nearby">nearby</string>
    <string name="location">location</string>
    <string name="view_rate">View rate</string>
    <string name="service_providers">Service Providers</string>
    <string name="login_us_user">login us User</string>
    <string name="register">Register</string>
    <string name="enter_your_name_here">enter your name here</string>
    <string name="enter_email_here">enter email here</string>
    <string name="enter_username_here">enter username here</string>
    <string name="enter_password_here">enter password here</string>
    <string name="back">back</string>
    <string name="signup_us_user">Signup us user</string>
    <string name="signup_us_service_provider">Signup us Service provider</string>
    <string name="details_of_service_provider">Details of Service Provider</string>
    <string name="enter_your_verification_code">Enter your Email Address</string>
    <string name="find">Find</string>
    <string name="enter_your_firstname">Enter your Firstname</string>
    <string name="enter_your_lastname">Enter Your Lastname</string>
    <string name="enter_your_experience_year">Name Of Your Company  </string>
    <string name="choose_your_work">Choose your work</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_phone_number">Phone number</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="experience">Experience</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="electronics">Electronics</string>
    <string name="home_works">Home Works</string>
    <string name="shopping">Shopping centers</string>
    <string name="drives">Drives</string>
    <string name="other_category">Other Category</string>
    <string name="fristname">Fristname</string>
    <string name="lastname">Lastname</string>
    <string name="email1">Email</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="title_activity_google_maps" translatable="false">Map</string>
    <string name="google_maps_key">AIzaSyAySuZAK9L3DQOewDhRRzMien1zfYiqArE</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
