<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Update_electronics">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fristname"
        android:id="@+id/ed_name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:id="@+id/ed_lname"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work"
        android:id="@+id/ed_work"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/experience"
        android:id="@+id/ed_exp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email1"
        android:id="@+id/ed_email"
        android:textSize="20sp"
        android:enabled="false"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:id="@+id/ed_phone"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:id="@+id/ed_description"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/update"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:onClick="btn_updateData"
        />

</LinearLayout>
</ScrollView>