<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity"
    android:background="@drawable/background2"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#071F3B"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragmet_container"/>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/user_navigation"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >

<!--    <ViewFlipper-->

<!--        android:id="@+id/flip"-->
<!--        android:layout_width="384dp"-->
<!--        android:layout_height="189dp"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginTop="56dp"-->
<!--        android:layout_marginBottom="470dp" />-->

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:background="#fff">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:src="@drawable/users" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:textAlignment="inherit"
            android:textColor="#000">

        </TextView>


        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginTop="-27dp"
            android:layout_marginLeft="150dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="inherit"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/textViewUseremail"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textAlignment="inherit"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-20dp"
            android:textColor="#000"
          />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/nearby"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#071F3B"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_near_me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/nearby"
            android:textColor="#F6B22A"
            android:textSize="25dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/locationusers"
        android:layout_width="138dp"
        android:layout_height="139dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#071F3B"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_my_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/location"
            android:textColor="#F6B22A"
            android:textSize="25dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/upload"
        android:background="#071F3B"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="200dp"
        android:backgroundTint="#071F3B"
        app:cardCornerRadius="20dp"
        app:layout_constraintVertical_bias="0.85">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_rate_review" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/view_rate"
            android:textColor="#F6B22A"
            android:textSize="25dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:backgroundTint="#071F3B"
        android:id="@+id/serviceproviders"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintVertical_bias="0.85">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_create_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/service_providers"
            android:textColor="#F6B22A"
            android:textSize="20dp" />

    </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>