<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/background"
    tools:context=".ServiceProfile">

    <ViewFlipper

        android:id="@+id/flip"
        android:layout_width="373dp"
        android:layout_height="172dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="478dp" />

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:src="@drawable/service" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:textAlignment="inherit"
            android:textColor="#071F3B">

        </TextView>


        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="USER NAME"
            android:textColor="#071F3B"
            android:textSize="20dp"
            android:layout_marginTop="-27dp"
            android:layout_marginLeft="150dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="inherit"
            android:textColor="#071F3B"/>

        <TextView
            android:id="@+id/textViewUseremail"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:text="USER EMAIL"
            android:textAlignment="inherit"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-20dp"
            android:textColor="#071F3B"
            />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/nearbyservice"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:layout_marginTop="409dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#071F3B"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/moviebutton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_near_me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/nearby"
            android:textColor="#F6B22A"
            android:textSize="25dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/locationservice"
        android:layout_width="138dp"
        android:layout_height="139dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="409dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#071F3B"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_my_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/location"
            android:textColor="#F6B22A"
            android:textSize="25dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/update"
        android:background="#071F3B"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:layout_marginTop="249dp"
        android:layout_marginLeft="200dp"
        android:backgroundTint="#071F3B"
        app:cardCornerRadius="20dp"
        app:layout_constraintVertical_bias="0.85">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_rate_review" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/view_rate"
            android:textColor="#F6B22A"
            android:textSize="25dp" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:backgroundTint="#071F3B"
        android:id="@+id/register"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:layout_marginTop="249dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintVertical_bias="0.85">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_create_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/register"
            android:textColor="#F6B22A"
            android:textSize="25dp" />

    </androidx.cardview.widget.CardView>


</RelativeLayout>